welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:9: error: '<-' expected but ')' found.
for (nbPas>0) {
            ^Program:15: error: illegal start of simple expression
	}
        ^